gen/grammar/SLParser.java
// Generated from G:/My Drive/DIEGO/Universidad/9 - NovenoSemestre/Lenguajes de Programación/Translator/src/grammar\SL.g4 by ANTLR 4.10.1
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, CONSTANTES=2, HASTA=3, MATRIZ=4, PASO=5, REGISTRO=6, SINO=7, VECTOR=8, 
		ARCHIVO=9, DESDE=10, INICIO=11, MIENTRAS=12, SUBRUTINA=13, REPETIR=14, 
		TIPOS=15, CASO=16, EVAL=17, LIB=18, NOT=19, PROGRAMA=20, RETORNA=21, VAR=22, 
		CONST=23, FIN=24, LIBEXT=25, OR=26, REF=27, VARIABLES=28, CADENA=29, LOGICO=30, 
		NUMERICO=31, TRUE=32, FALSE=33, SI=34, NO=35, TK_COMA=36, TK_CORCHETE_DERECHO=37, 
		TK_CORCHETE_IZQUIERDO=38, TK_DOS_PUNTOS=39, TK_LLAVE_DERECHA=40, TK_LLAVE_IZQUIERDA=41, 
		TK_MODULO=42, TK_MULTIPLICACION=43, TK_PARENTESIS_DERECHO=44, TK_PARENTESIS_IZQUIERDO=45, 
		TK_POTENCIACION=46, TK_PUNTO_Y_COMA=47, TK_RESTA=48, TK_SUMA=49, TK_ASIGNACION=50, 
		TK_IGUAL_QUE=51, TK_MENOR=52, TK_DISTINTO_DE=53, TK_MENOR_IGUAL=54, TK_MAYOR=55, 
		TK_MAYOR_IGUAL=56, TK_DIVISION=57, ID=58, TK_NUMERO=59, ESPACIOyCOMENTARIOS=60, 
		TK_CADENA=61, TK_PUNTO=62;
	public static final int
		RULE_codigo = 0, RULE_nombre = 1, RULE_declaracion = 2, RULE_declaracion_contenido_const = 3, 
		RULE_declaracion_contenido_tipos = 4, RULE_declaracion_contenido_var = 5, 
		RULE_valor = 6, RULE_valor_aux = 7, RULE_variable = 8, RULE_variable_aux = 9, 
		RULE_signo = 10, RULE_otros_id = 11, RULE_tipo_dato = 12, RULE_tamano_arreglo = 13, 
		RULE_mas_tamano_arreglo = 14, RULE_mas_declaraciones_var = 15, RULE_mas_declaraciones_tipos = 16, 
		RULE_mas_declaraciones_const = 17, RULE_main = 18, RULE_main_subrutina = 19, 
		RULE_sentencias = 20, RULE_sentencia = 21, RULE_sentencias_internas = 22, 
		RULE_sentencia_interna = 23, RULE_id_casos = 24, RULE_punto_y_coma_opcional = 25, 
		RULE_expresion = 26, RULE_expresion_aux = 27, RULE_valores_vector = 28, 
		RULE_posibles_valores_vector = 29, RULE_mas_valores_vector = 30, RULE_id_arreglo_registro = 31, 
		RULE_mas_pos_valor = 32, RULE_operador = 33, RULE_asignacion = 34, RULE_condicional = 35, 
		RULE_condicional_condicion = 36, RULE_mas_condicionales = 37, RULE_condicional_ = 38, 
		RULE_ciclo_mientras = 39, RULE_ciclo_mientras_condicion = 40, RULE_sentencia_eval = 41, 
		RULE_sentencia_eval_caso = 42, RULE_mas_casos_eval = 43, RULE_ciclo_desde = 44, 
		RULE_ciclo_desde_inicio = 45, RULE_ciclo_desde_fin = 46, RULE_paso_opt = 47, 
		RULE_llamada_subrutina = 48, RULE_parametros = 49, RULE_mas_parametros = 50, 
		RULE_sentencia_retorna_subrutina = 51, RULE_sentencia_retorna_main = 52, 
		RULE_valor_retorno = 53, RULE_ciclo_repetir = 54, RULE_ciclo_repetir_condicion = 55, 
		RULE_subrutina_ = 56, RULE_param_subrutina = 57, RULE_mas_param_subrutina = 58, 
		RULE_punto_y_coma_opcional_subrutina = 59, RULE_param_ref = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"codigo", "nombre", "declaracion", "declaracion_contenido_const", "declaracion_contenido_tipos", 
			"declaracion_contenido_var", "valor", "valor_aux", "variable", "variable_aux", 
			"signo", "otros_id", "tipo_dato", "tamano_arreglo", "mas_tamano_arreglo", 
			"mas_declaraciones_var", "mas_declaraciones_tipos", "mas_declaraciones_const", 
			"main", "main_subrutina", "sentencias", "sentencia", "sentencias_internas", 
			"sentencia_interna", "id_casos", "punto_y_coma_opcional", "expresion", 
			"expresion_aux", "valores_vector", "posibles_valores_vector", "mas_valores_vector", 
			"id_arreglo_registro", "mas_pos_valor", "operador", "asignacion", "condicional", 
			"condicional_condicion", "mas_condicionales", "condicional_", "ciclo_mientras", 
			"ciclo_mientras_condicion", "sentencia_eval", "sentencia_eval_caso", 
			"mas_casos_eval", "ciclo_desde", "ciclo_desde_inicio", "ciclo_desde_fin", 
			"paso_opt", "llamada_subrutina", "parametros", "mas_parametros", "sentencia_retorna_subrutina", 
			"sentencia_retorna_main", "valor_retorno", "ciclo_repetir", "ciclo_repetir_condicion", 
			"subrutina_", "param_subrutina", "mas_param_subrutina", "punto_y_coma_opcional_subrutina", 
			"param_ref"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'constantes'", "'hasta'", "'matriz'", "'paso'", "'registro'", 
			"'sino'", "'vector'", "'archivo'", "'desde'", "'inicio'", "'mientras'", 
			"'subrutina'", "'repetir'", "'tipos'", "'caso'", "'eval'", "'lib'", "'not'", 
			"'programa'", "'retorna'", "'var'", "'const'", "'fin'", "'libext'", "'or'", 
			"'ref'", "'variables'", "'cadena'", "'logico'", "'numerico'", "'TRUE'", 
			"'FALSE'", "'si'", "'NO'", "','", "']'", "'['", "':'", "'}'", "'{'", 
			"'%'", "'*'", "')'", "'('", "'^'", "';'", "'-'", "'+'", "'='", "'=='", 
			"'<'", "'<>'", "'<='", "'>'", "'>='", "'/'", null, null, null, null, 
			"'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "CONSTANTES", "HASTA", "MATRIZ", "PASO", "REGISTRO", "SINO", 
			"VECTOR", "ARCHIVO", "DESDE", "INICIO", "MIENTRAS", "SUBRUTINA", "REPETIR", 
			"TIPOS", "CASO", "EVAL", "LIB", "NOT", "PROGRAMA", "RETORNA", "VAR", 
			"CONST", "FIN", "LIBEXT", "OR", "REF", "VARIABLES", "CADENA", "LOGICO", 
			"NUMERICO", "TRUE", "FALSE", "SI", "NO", "TK_COMA", "TK_CORCHETE_DERECHO", 
			"TK_CORCHETE_IZQUIERDO", "TK_DOS_PUNTOS", "TK_LLAVE_DERECHA", "TK_LLAVE_IZQUIERDA", 
			"TK_MODULO", "TK_MULTIPLICACION", "TK_PARENTESIS_DERECHO", "TK_PARENTESIS_IZQUIERDO", 
			"TK_POTENCIACION", "TK_PUNTO_Y_COMA", "TK_RESTA", "TK_SUMA", "TK_ASIGNACION", 
			"TK_IGUAL_QUE", "TK_MENOR", "TK_DISTINTO_DE", "TK_MENOR_IGUAL", "TK_MAYOR", 
			"TK_MAYOR_IGUAL", "TK_DIVISION", "ID", "TK_NUMERO", "ESPACIOyCOMENTARIOS", 
			"TK_CADENA", "TK_PUNTO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CodigoContext extends ParserRuleContext {
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public Subrutina_Context subrutina_() {
			return getRuleContext(Subrutina_Context.class,0);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitCodigo(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_codigo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			nombre();
			setState(123);
			declaracion();
			setState(124);
			main();
			setState(125);
			subrutina_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NombreContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(SLParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public NombreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterNombre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitNombre(this);
		}
	}

	public final NombreContext nombre() throws RecognitionException {
		NombreContext _localctx = new NombreContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nombre);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(PROGRAMA);
				setState(128);
				match(ID);
				}
				break;
			case INICIO:
			case TIPOS:
			case VAR:
			case CONST:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(SLParser.VAR, 0); }
		public Declaracion_contenido_varContext declaracion_contenido_var() {
			return getRuleContext(Declaracion_contenido_varContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public TerminalNode TIPOS() { return getToken(SLParser.TIPOS, 0); }
		public Declaracion_contenido_tiposContext declaracion_contenido_tipos() {
			return getRuleContext(Declaracion_contenido_tiposContext.class,0);
		}
		public TerminalNode CONST() { return getToken(SLParser.CONST, 0); }
		public Declaracion_contenido_constContext declaracion_contenido_const() {
			return getRuleContext(Declaracion_contenido_constContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitDeclaracion(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(VAR);
				setState(133);
				declaracion_contenido_var();
				setState(134);
				declaracion();
				}
				break;
			case TIPOS:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(TIPOS);
				setState(137);
				declaracion_contenido_tipos();
				setState(138);
				declaracion();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				match(CONST);
				setState(141);
				declaracion_contenido_const();
				setState(142);
				declaracion();
				}
				break;
			case INICIO:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_contenido_constContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public TerminalNode TK_ASIGNACION() { return getToken(SLParser.TK_ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Mas_declaraciones_constContext mas_declaraciones_const() {
			return getRuleContext(Mas_declaraciones_constContext.class,0);
		}
		public Declaracion_contenido_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_contenido_const; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterDeclaracion_contenido_const(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitDeclaracion_contenido_const(this);
		}
	}

	public final Declaracion_contenido_constContext declaracion_contenido_const() throws RecognitionException {
		Declaracion_contenido_constContext _localctx = new Declaracion_contenido_constContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion_contenido_const);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(ID);
			setState(148);
			match(TK_ASIGNACION);
			setState(149);
			expresion();
			setState(150);
			mas_declaraciones_const();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_contenido_tiposContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public TerminalNode TK_DOS_PUNTOS() { return getToken(SLParser.TK_DOS_PUNTOS, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Mas_declaraciones_tiposContext mas_declaraciones_tipos() {
			return getRuleContext(Mas_declaraciones_tiposContext.class,0);
		}
		public Declaracion_contenido_tiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_contenido_tipos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterDeclaracion_contenido_tipos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitDeclaracion_contenido_tipos(this);
		}
	}

	public final Declaracion_contenido_tiposContext declaracion_contenido_tipos() throws RecognitionException {
		Declaracion_contenido_tiposContext _localctx = new Declaracion_contenido_tiposContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion_contenido_tipos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(ID);
			setState(153);
			match(TK_DOS_PUNTOS);
			setState(154);
			tipo_dato();
			setState(155);
			mas_declaraciones_tipos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_contenido_varContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public Otros_idContext otros_id() {
			return getRuleContext(Otros_idContext.class,0);
		}
		public TerminalNode TK_DOS_PUNTOS() { return getToken(SLParser.TK_DOS_PUNTOS, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Mas_declaraciones_varContext mas_declaraciones_var() {
			return getRuleContext(Mas_declaraciones_varContext.class,0);
		}
		public Declaracion_contenido_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_contenido_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterDeclaracion_contenido_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitDeclaracion_contenido_var(this);
		}
	}

	public final Declaracion_contenido_varContext declaracion_contenido_var() throws RecognitionException {
		Declaracion_contenido_varContext _localctx = new Declaracion_contenido_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion_contenido_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(ID);
			setState(158);
			otros_id();
			setState(159);
			match(TK_DOS_PUNTOS);
			setState(160);
			tipo_dato();
			setState(161);
			mas_declaraciones_var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public Valor_auxContext valor_aux() {
			return getRuleContext(Valor_auxContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitValor(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_valor);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				match(ID);
				setState(164);
				valor_aux();
				}
				break;
			case TRUE:
			case FALSE:
			case SI:
			case NO:
			case TK_RESTA:
			case TK_SUMA:
			case TK_NUMERO:
			case TK_CADENA:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Valor_auxContext extends ParserRuleContext {
		public Llamada_subrutinaContext llamada_subrutina() {
			return getRuleContext(Llamada_subrutinaContext.class,0);
		}
		public Id_arreglo_registroContext id_arreglo_registro() {
			return getRuleContext(Id_arreglo_registroContext.class,0);
		}
		public Valor_auxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor_aux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).enterValor_aux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLListener ) ((SLListener)listener).exitValor_aux(this);
		}
	}

	public final Valor_auxContext valor_aux() throws RecognitionException {
		Valor_auxContext _localctx = new Valor_auxContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_valor_aux);
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_PARENTESIS_IZQUIERDO:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				llamada_subrutina();
				}
				break;
			case TK_CORCHETE_IZQUIERDO:
			case TK_PUNTO:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				id_arreglo_registro();
				}
				break;
			case AND:
			case HASTA:
			case PASO:
			case SINO:
			case DESDE:
			case INICIO:
			case MIENTRAS:
			case REPETIR:
			case TIPOS:
			case CASO:
			case EVAL:
			case RETORNA:
			case VAR:
			case CONST:
			case FIN:
			case OR:
			case SI:
			case TK_COMA:
			case TK_CORCHETE_DERECHO:
			case TK_LLAVE_DERECHA:
			case TK_LLAVE_IZQUIERDA:
			case TK_MODULO:
			case TK_MULTIPLICACION:
			case TK_PARENTESIS_DERECHO:
			case TK_POTENCIACION:
			case TK_PUNTO_Y_COMA:
			case TK_RESTA:
			case TK_SUMA:
			case TK_IGUAL_QUE:
			case TK_MENOR:
			case TK_DISTINTO_DE:
			case TK_MENOR_IGUAL:
			case TK_MAYOR:
			case TK_MAYOR_IGUAL:
			case TK_DIVISION:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
